/*
 * AI Interview Platform - Backend Application
 * Spring Boot 4.0 + Java 21 + Spring AI 2.0 + PostgreSQL + pgvector + RustFS + Redis
 */

plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = 'com.interview'
version = '0.0.1-SNAPSHOT'

repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://maven.aliyun.com/repository/spring/' }
    maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    // Spring Boot Starters (Boot 4.0 modular design)
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Micrometer + Prometheus 监控
    implementation 'io.micrometer:micrometer-registry-prometheus'
    // Spring AI Actuator - AI调用指标自动收集 (spring-ai-starter-model-openai 已包含)

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // Spring AI 2.0 - OpenAI兼容模式 (阿里云DashScope)
    implementation "org.springframework.ai:spring-ai-starter-model-openai:${libs.versions.springAi.get()}"
    // Spring AI Alibaba Graph - 工作流编排
    implementation libs.springAiAlibabaGraphCore
    // Spring AI 2.0 - PostgreSQL Vector Store (pgvector)
    implementation "org.springframework.ai:spring-ai-starter-vector-store-pgvector:${libs.versions.springAi.get()}"
    // Spring AI 2.0 - MCP Client
    implementation "org.springframework.ai:spring-ai-starter-mcp-client-webflux:${libs.versions.springAi.get()}"

    // Apache Tika for document parsing (PDF, DOCX, TXT)
    implementation libs.tika.core
    implementation libs.tika.parsers

    // AWS S3 SDK for RustFS storage
    implementation "software.amazon.awssdk:s3:${libs.versions.aws.sdk.get()}"

    // Redisson 4.0 - Redis客户端 (Boot 4.0 compatible)
    implementation "org.redisson:redisson-spring-boot-starter:${libs.versions.redisson.get()}"

    // JJWT - JWT Token 生成与解析
    implementation libs.jjwt.api
    runtimeOnly libs.jjwt.impl
    runtimeOnly libs.jjwt.jackson

    // PDF导出 - iText 8
    implementation "com.itextpdf:itext-core:${libs.versions.itext.get()}"
    implementation "com.itextpdf:font-asian:${libs.versions.itext.get()}"

    // Apache POI for Excel parsing
    implementation libs.poi.core
    implementation libs.poi.ooxml

    // Lombok
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    // MapStruct - 对象映射 (必须在Lombok之后配置)
    implementation "org.mapstruct:mapstruct:${libs.versions.mapstruct.get()}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${libs.versions.mapstruct.get()}"
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
